--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               <div class="md:w-1/2 mt-2 md:mt-3">
                     <img src="https://gcdnb.pbrd.co/images/gd1kA81x4yW1.jpg?o=1" alt="Profile" class="rounded-full w-80 h-80 object-cover mx-auto shadow-xl">
                 </div>
-                <div class="md:w-1/2 mt-12 animate__animated animate__fadeInLeft">
+                <div class="md:w-1/2 mt-12 animate__animated animate__fadeUp">
                     <h1 class="text-5xl md:text-6xl font-bold mb-6">Hi, I'm <span class="text-blue-600">Anthony</span></h1>
                     <p class="text-xl mb-8 text-gray-600">Student of Grade 11 High School at SMAS Poris Indah | Freelance Website Developer</p>
                     <button onclick="location.href='https://www.linkedin.com/in/anthony-ardyka/';" class="bg-blue-600 text-white px-8 py-3 rounded-full hover:bg-blue-700 transition">
@@ -81,7 +81,7 @@
         <div class="container mx-auto px-6">
             <h2 class="text-4xl font-bold text-center mb-12" data-aos="fade-up">About Me</h2>
             <div class="flex flex-col md:flex-row items-center gap-12">
-                <div class="md:w-1/2" data-aos="fade-right">
+                <div class="md:w-1/2" data-aos="fade-up">
                     <p class="text-gray-600 text-lg leading-relaxed">
                         Saya adalah siswa di Sekolah Poris Indah dan saat ini duduk di bangku SMA. Saya adalah siswa berprestasi dengan peringkat 1-2 di kelas. Saya memiliki keterampilan dalam coding dengan bahasa pemrograman dan saya bersedia untuk terus belajar bahasa pemrograman baru. Saya adalah tipe coder yang mengutamakan kerapian dan kelengkapan dalam segala aspek, sulit jika saya dikejar waktu. Saya juga mampu mengelola server berbasis Linux (CentOS, AlmaLinux, Ubuntu, dan lainnya) untuk hosting cPanel dan CyberPanel.
                   </p>
@@ -90,7 +90,7 @@
                       <b>Bad News!</b> Saya sudah mulai meninggalkan dunia yang berhubungan dengan coding, karena entah mengapa saya tidak terlalu tertarik untuk melakukan hal-hal seperti ini. Saya membuat ini hanya untuk tugas dan bukan dengan niat yang sungguh-sungguh.
                     </p>
                 </div>
-                <div class="md:w-1/2 grid grid-cols-2 md:grid-cols-2 gap-4" data-aos="fade-left">
+                <div class="md:w-1/2 grid grid-cols-2 md:grid-cols-2 gap-4" data-aos="fade-up">
                     <div class="p-6 bg-blue-50 rounded-xl">
                         <h3 class="text-xl font-bold mb-2">4-5 Tahun</h3>
                         <p class="text-gray-600">Pengalaman</p>
