--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ Jan 2025 - Jan 2025</h4>
               <div class="project-card bg-white rounded-xl shadow-md overflow-hidden hover:shadow-xl transition" 
                      data-aos="zoom-in"
                       data-redirect="true"
-                       data-url="https://www.linkedin.com/in/anthony-ardyka/details/projects/?profileId=ACoAAE220KwBD11zG2xzUv2yvvD1GXNdz0-l7Ys"
+                       data-url="https://www.linkedin.com/in/anthony-ardyka/"
                      >
                     <div class="p-6">
                         <h3 class="text-xl font-bold text-red-600">
@@ -303,7 +303,7 @@ Jan 2025 - Jan 2025</h4>
               <div class="project-card bg-white rounded-xl shadow-md overflow-hidden hover:shadow-xl transition" 
                      data-aos="zoom-in"
                      data-redirect="true"
-                       data-url="https://www.linkedin.com/in/anthony-ardyka/details/projects/?profileId=ACoAAE220KwBD11zG2xzUv2yvvD1GXNdz0-l7Ys">
+                       data-url="https://www.linkedin.com/in/anthony-ardyka/">
                     <div class="p-6">
                         <h3 class="text-xl font-bold text-red-600">
 GACORTranslator [BIG PROJECT]</h3>
@@ -334,7 +334,7 @@ Jan 2025 - Jan 2025</h4>
               <div class="project-card bg-white rounded-xl shadow-md overflow-hidden hover:shadow-xl transition" 
                      data-aos="zoom-in"
                      data-redirect="true"
-                       data-url="https://www.linkedin.com/in/anthony-ardyka/details/projects/?profileId=ACoAAE220KwBD11zG2xzUv2yvvD1GXNdz0-l7Ys">
+                       data-url="https://www.linkedin.com/in/anthony-ardyka/">
                     <div class="p-6">
                         <h3 class="text-xl font-bold text-red-600">
 GACORSosiologi [BIG PROJECT]</h3>
@@ -350,7 +350,7 @@ Feb 2025 - Feb 2025</h4>
               <div class="project-card bg-white rounded-xl shadow-md overflow-hidden hover:shadow-xl transition" 
                      data-aos="zoom-in"
                       data-redirect="true"
-                       data-url="https://www.linkedin.com/in/anthony-ardyka/details/projects/?profileId=ACoAAE220KwBD11zG2xzUv2yvvD1GXNdz0-l7Ys"
+                       data-url="https://www.linkedin.com/in/anthony-ardyka/"
                      >
                     <div class="p-6">
                         <h3 class="text-xl font-bold text-red-600">
